--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -4,7 +4,7 @@
     padding: 0 5rem;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 30px;
     margin-top: 2rem;
 }
 
