--- a/src/pages/Error/error.scss
+++ b/src/pages/Error/error.scss
@@ -13,6 +13,7 @@
 
     h2 {
         font-weight: 500;
+        text-align: center;
     }
 
     a {
@@ -24,7 +25,26 @@
 
     .error {
         h1 {
-            font-size: 200px;
+            font-size: 180px;
+        }
+    }
+   
+}
+
+@media (max-width: 500px) {
+
+    .error {
+        h1 {
+            font-size: 96px;
+            margin: 4rem auto;
+        }
+        h2 {
+            font-size: 18px;
+            min-width: 260px;
+        }
+        a {
+            text-decoration: underline;
+            margin: 3rem auto;
         }
     }
    
